--- a/employee-service.yaml
+++ b/employee-service.yaml
@@ -1,4 +1,6 @@
 spring:
+  boot:
+    message: hello, employee service
   datasource:
     url: jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5445}/${POSTGRES_DB:udemy_2}
     username: ${POSTGRES_USERNAME:udemy_2}
