--- a/department-service.yaml
+++ b/department-service.yaml
@@ -1,6 +1,6 @@
 spring:
   boot:
-    message: hello, from config server. updated
+    message: hello, department service bus demo
   datasource:
     url: jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5444}/${POSTGRES_DB:udemy_1}
     username: ${POSTGRES_USERNAME:udemy_1}
